--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ms": "^2.1.1",
     "google-translate-api": "^2.3.0", 
     "opusscript": "0.0.6",
+    "figlet": "1.2.0",
     "quick.db": "^6.2.0",
     "request": "^2.85.0",
     "pretty-ms": "^3.2.0",
